--- a/doc/Manual.adoc
+++ b/doc/Manual.adoc
@@ -135,6 +135,16 @@ The documentation of the backend API can be found here: https://8ch9azbsfifz.git
 + If you want to run MQTT locally on the raspi run `sudo apt-get -y install mosquitto`
 
 
+#### Add App Icon
+The application icon is located under `assets/icon`. The backgound source code image has been created using https://ray.so. 
++ The PNG can be converted to icon sets using this tool: https://appicon.co/ .
+
+For iOS follow these steps to configure the application icon:
++ Start Xcode `open ios/hangboardapp.xcworkspace`
++ On the root directory click on the folder named Images.xcassets.
++ Import a new IconSet 
+
+
 
 # Hardware Design
 - Raspberry Pi Zero W
