howto create new board configs

--- a/doc/Manual.adoc
+++ b/doc/Manual.adoc
@@ -425,6 +425,20 @@ repository.
 Measuring a hangboard is lots of work, i.e. <<Beastmaker1000HoldSizes>>.
 
 
+## Implement new board configurations
+
+- Install inkscape `brew install inkscape`
+- Create a new board json file 
+- Use inkscape with layers for overlay image creation 
+- Edit layer "id" names manually afterwards in any editor
+- change all style:: display:inline => inline
+- Use colors: 979797 and d8d8d8
+- Export layers as svg: https://github.com/james-bird/layer-to-svg (cf. boards directory)
+- Change colors of overlays to: d8d8d8 -> 979797
+- Export all layers as svg and convert them to png (i.e. https://svgtopng.com/de/)
+- Conversion to PNG for all permutations can be done using the `backend/generate_all_board_images.py` script.
+- Put all PNG images to `flutter_hangboard/images`
+
 
 
 [bibliography]
