--- a/doc/Manual.adoc
+++ b/doc/Manual.adoc
@@ -83,27 +83,12 @@ The class documentation of the backend services can be found here: https://8ch9a
 - MQTT for Communication 
 - JSON for Board configuration and finger grip positions
 - SVG Layers for hold configuration (will be converted to PNG in a cache, as flutter has no native SVG support)
-
-
-## Developing the software
-For preparation install the following software:
-- Install flutter and configure correct paths
-- Prepare the virtual python environment
-  ```
-    python3 -m venv venv
-    source venv/bin/activate
-    python3 -m pip install -r backend/requirements.txt
-  ```
-- Install a fresh raspian on a SD card, put the corresponding wpa_supplicant.conf into the boot folder - ready for SSH :)
+- REST api for image and sound sources
 
 ### Software documentation
 - For manual documentation (manual creation): install `brew install asciidoctor` and create the PDF `cd doc; asciidoctor-pdf Manual.adoc`
 - Documentation of the backend software can be created using `doxygen` (cf. Doxyfile). `brew install doxygen`.
 - The documentation is automatically generated using a commit hook on github and published on gh-pages.
-
-For manual startup:
-- Start backend service ```cd backend; python3 ./run_ws.py ```
-- Start the iOS / Android / Web App: `cd flutter_hangboard && flutter run`
 
 #### API (MQTT)
 The documentation of the backend API can be found here: https://8ch9azbsfifz.github.io/hangboard/api/index.html .
@@ -111,17 +96,6 @@ The documentation of the backend API can be found here: https://8ch9azbsfifz.git
 - AsyncAPI for documentation of the API
 - For manual generation install ```npm install -g @asyncapi/generator ``` and run ```cd backend ; ag asyncapi.yaml @asyncapi/html-template -o ./docs```
 - If you want to run MQTT locally on the raspi run `sudo apt-get -y install mosquitto`
-
-
-#### Add App Icon
-The application icon is located under `assets/icon`. The backgound source code image has been created using https://ray.so. 
-- The PNG can be converted to icon sets using this tool: https://appicon.co/ .
-
-For iOS follow these steps to configure the application icon:
-- Start Xcode `open ios/hangboardapp.xcworkspace`
-- On the root directory click on the folder named Images.xcassets.
-- Import a new IconSet 
-
 
 
 # Hardware Design
@@ -135,20 +109,6 @@ image::./hardware/hangboard_wiring.png[{half-size}Hangboard wiring - all sensors
 
 
 
-# Training plans, Workouts, Exercises and Sets
-The following definitions will be used:
-
-Training Plan:: A series of workouts, usually executed with at least of one day rest in between.
-Workout:: A series of exercise sets.
-Excercise:: A single exercise, i.e. hang, maximal hang, pull up, assisted pull up.
-Set:: A set of exercises with *Repetitions*, *Pause* between the exercises and a *rest to start* pause.
-
-## Workout files
-*TODO*
-
-## Creating a custom workout based on MVC
-Once you have measured your MVC, you can create a custom workout using the script:
-`exercises/mvc_workout_creator.py`.
 
 
 # Measurements, their definitions and what to learn from them
